Removed header, fixed text wrap

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@ html {
     font-family: 'Ysabeau Infant', sans-serif;
 }
 
-h1 {
-    font-size: 1.7 em;
+a {
+    text-decoration: none;
+
 }
 
 ul{
@@ -31,6 +32,7 @@ span{
            color: #222;
            background-color: #fff;
           }
+ 
 }
 
 @media (prefers-color-scheme: light) {
@@ -43,6 +45,7 @@ span{
         background-color: #1a1919;
         color: white;
           }
+
 }
    
    
